--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,12 @@
 Package: zNet
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
-Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+Title: Longitudinal Network Analysis Tools
+Version: 0.0.1.0000
+Authors@R: person('Hui', 'Zheng', email = 'zh.dmtr@gmail.com', role = c('aut', 'cre'))
+Description: Tools for processing and analyzing longitudinal network data.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-Suggests: 
-    testthat (>= 3.0.0)
-Config/testthat/edition: 3
-Repository: 
-  GitHub::Ernest861/zNet
+Imports:
+    ufs,
+    stats
